--- a/list.html
+++ b/list.html
@@ -3,5 +3,5 @@
 <li>this is</li>
 <li>an unordered list</li> <li>with four</li>
 <li>items</li> <ul/>
-<a href="index.html">This is a link to home</a>
+<a href="morganjustine.github.io/index.html">This is a link to home</a>
 </body>
