--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <title>Cmpt 104</title> </head>
 <body>
   <h1>Hello World</h1> <p>Welcome to my webpage.</p>
+  <img src="Sals1921.jpg" alt="A picture of the greenhouse titled 1921 at Salisbury Greenhouse" />
 </body>
 </html>
