--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!doctype html> <html lang="en">
 <head>
+  <!doctype html> <html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Cmpt 104</title>
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <meta charset="utf-8">
 <title>Cmpt 104</title> </head>
 <body>
