--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>Cmpt 104</title>
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="morganjustine.github.io/mystyle.css">
 </head>
 <meta charset="utf-8">
 <title>Cmpt 104</title> </head>
