--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
   <h1>Hello World</h1> <p>Welcome to my webpage.</p>
   <img src="Sals1921.jpeg" alt="A picture at Salisbury Greenhouse, 1921 is the name of this particular greenhouse." />
+  </head>
 </body>
 </html>
