--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!doctype html> <html lang="en">
-<head>
-  <!doctype html> <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Cmpt 104</title>
-</head>
-<meta charset="utf-8">
-<title>Cmpt 104</title> </head>
-  <link rel="stylesheet" href="morganjustine.github.io/mystyle.css">
-<body>
-  <h1>Hello World</h1> <p>Welcome to my webpage.</p>
-  <img src="Sals1921.jpeg" alt="A picture at Salisbury Greenhouse, 1921 is the name of this particular greenhouse." />
-  </head>
-</body>
-</html>
+Hello World!
