--- a/list.html
+++ b/list.html
@@ -5,5 +5,5 @@
 <li>with four</li>
 <li>items</li> 
 </ul>
-<a href="morganjustine.github.io/index.html">This is a link to home</a>
+<a href="https://morganjustine.github.io/index.html">This is a link to home</a>
 </body>
