--- a/list.html
+++ b/list.html
@@ -1,7 +1,9 @@
-<!doctype html> <html lang="en">
+<!doctype html> 
+<html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Cmpt 104</title> </head>
+<title>Cmpt 104</title> 
+  </head>
 <body>
 <ul>
 <li>this is</li>
@@ -9,6 +11,6 @@
 <li>with four</li>
 <li>items</li> 
 </ul>
-  <a href="https://morganjustine.github.io/index.html">This is a link to home</a>
+  <a href="index.html">This is a link to home</a>
 </body>
 </html>
