--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
   <h1>Hello World</h1> 
   <p>Welcome to my webpage.</p>
-  <img src="Sals1921.jepg" alt="This is a picture taken at Salisbury Greenhouse. The greenhouse in the image is titled 1921 and is open to customers during the busy season." />
+  <img src="Sals1921.jpeg" alt="This is a picture taken at Salisbury Greenhouse. The greenhouse in the image is titled 1921 and is open to customers during the busy season." />
 </body>
 </html>
