--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!doctype html> <html lang="en">
+<!doctype html> 
+<html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Cmpt 104</title> </head>
+<title>Cmpt 104</title> 
+<link rel="stylesheet" href="MorganJustine.github.io/mystyle.css">
+</head>
 <body>
   <h1>Hello World</h1> 
   <p>Welcome to my webpage.</p>
