--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Hello World</h1> 
-  <p class="fancy"Welcome to my webpage.</p>
+  <p class="fancy">Welcome to my webpage.</p>
   <img src="Sals1921.jpeg" alt="This is a picture taken at Salisbury Greenhouse. The greenhouse in the image is titled 1921 and is open to customers during the busy season." />
 </body>
 </html>
