--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Hello World</h1> 
   <p class="fancy">Welcome to my webpage.</p>
+  <h2>There are three sections on my page.</h2>
   <img src="Sals1921.jpeg" alt="This is a picture taken at Salisbury Greenhouse. The greenhouse in the image is titled 1921 and is open to customers during the busy season." />
 </body>
 </html>
