--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>Cmpt 104</title> 
-<link rel="stylesheet" href="MorganJustine.github.io/mystyle.css">
-  
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
   <h1>Hello World</h1> 
-  <p class="fancy">Welcome to my webpage.</p>
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
+  </ul>
   <img src="Sals1921.jpeg" alt="This is a picture taken at Salisbury Greenhouse. The greenhouse in the image is titled 1921 and is open to customers during the busy season." />
 </body>
 </html>
