--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <h1>Hello World</h1> 
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
+<li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
+<li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
+<li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
   </ul>
-  <img src="Sals1921.jpeg" alt="This is a picture taken at Salisbury Greenhouse. The greenhouse in the image is titled 1921 and is open to customers during the busy season." />
 </body>
-</html>
