--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Hello World</h1> 
   <ul class="nav">
-    <li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
+    <li><a href="https://morganjustine.github.io/hobbies.html"My Hobbies</a></li>
 <li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
 <li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
 <li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
