--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1>Hello World</h1> 
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">My Hobbies</a></li>
-<li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
-<li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
-<li><a href="https://morganjustine.github.io/hobbies.html"</a></li>
+<li><a href="https://morganjustine.github.io/hobbies.html">Test 2></a></li>
+<li><a href="https://morganjustine.github.io/hobbies.html">Test 3></a></li>
+<li><a href="https://morganjustine.github.io/hobbies.html">Test 4></a></li>
   </ul>
 </body>
