--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">My Hobbies</a></li>
 <li><a href="https://morganjustine.github.io/Bentley.html">My Dog></a></li>
-<li><a href="https://morganjustine.github.io/hobbies.html">Test 3></a></li>
+<li><a href="https://morganjustine.github.io/Sals.html">My Work></a></li>
 <li><a href="https://morganjustine.github.io/hobbies.html">Test 4></a></li>
   </ul>
 </body>
