--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-  <h1>Hello World</h1> 
+  <h1>Hello World!</h1> 
+  <h2>Welcome to my website.</h2>
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">My Hobbies</a></li>
 <li><a href="https://morganjustine.github.io/Bentley.html">My Dog></a></li>
