--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>Hello World!</h1> 
-  <h2> class="nav">
-  Welcome to my website.
+  <h2 class="nav">
+    <h2>Welcome to my website.</h2>
   </h2>
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">My Hobbies</a></li>
