--- a/hobbies.html
+++ b/hobbies.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
-<head> 		
-<title>My Hobbies</title>
-       <link href="myStyleSheet.css" rel="stylesheet" type="text/css"  />
-</head> 
-<body> 
-</body> 
+ 	   <head> 
+		        <title>My Hobbies</title>
+		        <link href="myStyleSheet.css" rel="stylesheet" type="text/css"  />			
+	     </head> 
+    <body>
+		     <p><a href="index.html">Go Home</a></p>
+		     <p>This is my page of hobbies</p>
+ 	</body> 
 </html>
+
