--- a/Bentley.html
+++ b/Bentley.html
@@ -1,1 +1,11 @@
-
+<!doctype html>
+<html>
+<head> 
+<title>Meet Bentley</title>
+<link href="myStyleSheet.css" rel="stylesheet" type="text/css"  />			
+  </head> 
+<body>
+<p><a href="index.html">Go Home</a></p>
+<p>This page introduces you to my dog, Bentley.</p>
+</body> 
+</html>
