--- a/hobbies.html
+++ b/hobbies.html
@@ -2,11 +2,11 @@
 <html>
 <head> 
 <title>My Hobbies</title>
-	<link href="myStyleSheet.css" rel="stylesheet" type="text/css"  />			
+	<link href="mystyle.css" rel="stylesheet" type="text/css"  />			
 	     </head> 
     <body>
 	    <p><a href="index.html">Go Home</a></p>
-	    <p>This is my page of hobbies</p>
+	    <p>This is my page of hobbies.</p>
  	</body> 
 </html>
 
