--- a/Sals.html
+++ b/Sals.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head> 
-<title>Meet Bentley</title>
+<title>Work</title>
 <link href="mystyle.css" rel="stylesheet" type="text/css"  />			
-  </head> 
-<body>
-<p><a href="index.html">Go Home</a></p>
-<p>This page shows you what I did before starting the LIT program.</p>
-</body> 
+</head>
+	<body>
+	    <p><a href="index.html">Go Home</a></p>
+	    <p>This page shows you what I did before starting the LIT Program.</p>
+ 	</body> 
 </html>
