--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,7 @@
 	<body>
 	    <p><a href="index.html">Go Home</a></p>
 	    <p>This is my page of hobbies.</p>
+		<img src="Flute.jpg" alt="A flute." />
  	</body> 
 </html>
 
