--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <title>My Hobbies</title>
-<link href="mystyle.css" rel="stylesheet" type="text/css"  />			
+<link href="hobbies.css" rel="stylesheet" type="text/css"  />			
 </head>
 	<body>
 	    <p><a href="index.html">Go Home</a></p>
