--- a/hobbies.html
+++ b/hobbies.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
-<H1> 
 <title>My Hobbies</title>
 <link href="hobbies.css" rel="stylesheet" type="text/css"  />			
-</H1>
+	<h1>This is a page of my hobbies.</h1>
 	<body>
 	    <p><a href="index.html">Go Home</a></p>
-	    <p>This is my page of hobbies.</p>
+	    <p>I love playing the flute.</p>
 		<img src="Flute.jpg" alt="A flute." />
  	</body> 
 </html>
