--- a/hobbies.html
+++ b/hobbies.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
+<head>
 <title>My Hobbies</title>
-<link href="hobbies.css" rel="stylesheet" type="text/css"  />			
+<link href="hobbies.css" rel="stylesheet" type="text/css"  />		
+ </head>	
 <h1>This is a page of my hobbies.</h1>
 <body>
 <p><a href="index.html">Go Home</a></p>
