--- a/hobbies.html
+++ b/hobbies.html
@@ -7,8 +7,9 @@
 <h1>This is a page of my hobbies.</h1>
 <body>
 <p><a href="index.html">Go Home</a></p>
-<p>I love playing the flute.</p>
+<p1>I love playing the flute.</p2>
 <img src="Flute.jpg" alt="A flute." />
+<p2>This is a video from high school, but I also played in the University of Alberta Concert Band.</p2>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </body> 
 </html>
