--- a/hobbies.html
+++ b/hobbies.html
@@ -10,6 +10,7 @@
 <p1>I love playing the flute.</p1>
 <img src="Flute.jpg" alt="A flute." />
 <p2>This is a video from high school, but I also played in the University of Alberta Concert Band.</p2>
+<iframe class="nav">
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </body> 
 </html>
