--- a/hobbies.html
+++ b/hobbies.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<html lang="en">
 <head>
 <title>My Hobbies</title>
 <link href="hobbies.css" rel="stylesheet" type="text/css"  />		
