--- a/hobbies.html
+++ b/hobbies.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html>
+<!doctype html> 
 <html lang="en">
+<head>
+<meta charset="utf-8">
 <head>
 <title>My Hobbies</title>
 <link href="hobbies.css" rel="stylesheet" type="text/css"  />		
