--- a/hobbies.html
+++ b/hobbies.html
@@ -1,19 +1,17 @@
+  
 <!doctype html> 
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<head>
-<title>My Hobbies</title>
-<link href="hobbies.css" rel="stylesheet" type="text/css"  />		
- </head>	
-<h1>This is a page of my hobbies.</h1>
+<title>Cmpt 104</title> 
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
-<p1>I love playing the flute.</p1>
+  <p><a href="index.html">Go Home</a></p>
+  <h1>This page shows you my hobbies!</h1> 
+  <p1>I love playing the flute.</p1>
 <img src="Flute.jpg" alt="A flute." />
 <p2>This is a video from high school, but I also played in the University of Alberta Concert Band.</p2>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </body> 
 </html>
-
- 
- <p><a href="index.html">Go Home</a></p>
