--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,6 @@
 <body>
   <h1>This page shows you my hobbies!</h1> 
   <h2>I love playing the flute. Here is a video from high school, but I also played in the University of Alberta Concert Band.</h2>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </body> 
 </html>
