--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,9 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="mystyle.css">
   <p><a href="index.html">Go Home</a></p>
-<body><h1>This page shows you my hobbies!</h1> 
+<body>
+  <h1>This page shows you my hobbies!</h1> 
   <h2>I love playing the flute. Here is a video from high school, but I also played in the University of Alberta Concert Band.</h2>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body> 
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </body> 
 </html>
