--- a/Bentley.html
+++ b/Bentley.html
@@ -1,11 +1,7 @@
-<!doctype html>
-<html>
-<head> 
-<title>My Dog</title>
-<link href="mystyle.css" rel="stylesheet" type="text/css"  />			
-</head>
-	<body>
-	    <p><a href="index.html">Go Home</a></p>
-	    <p>This page introduces you to my dog, Bentley.</p>
- 	</body> 
-</html>
+<!doctype html> 
+<html lang="en">
+<meta charset="utf-8">
+<title>Cmpt 104</title> 
+<link rel="stylesheet" href="mystyle.css">
+    <p><a href="index.html">Go Home</a></p>
+  <h1>Say hello to Bentley!</h1> 
