--- a/Bentley.html
+++ b/Bentley.html
@@ -4,4 +4,10 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="mystyle.css">
     <p><a href="index.html">Go Home</a></p>
-  <h1>Say hello to Bentley!</h1> 
+  <h1>Say hello to Bentley! Things to know...</h1> 
+<ul>
+<li>He just turned three years old.</li>
+<li>He is a border-collie.</li> 
+<li>He loves hiking in the mountains.</li>
+<li>If you ask him to cuddle, he will jump into your lap.</li> 
+</ul>
