--- a/Bentley.html
+++ b/Bentley.html
@@ -4,7 +4,8 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="mystyle.css">
     <p><a href="index.html">Go Home</a></p>
-  <h1>Say hello to Bentley! Things to know...</h1> 
+    <h1>Say hello to Bentley!</h1> 
+<h2>Things to know...</h2> 
 <ul>
 <li>He just turned three years old.</li>
 <li>He is a border-collie.</li> 
