--- a/Bentley.html
+++ b/Bentley.html
@@ -6,7 +6,7 @@
     <p><a href="index.html">Go Home</a></p>
     <h1>Say hello to Bentley!</h1> 
 <h2>Things to know...</h2> 
-<ul>
+<ul class="nav">
 <li>He just turned three years old.</li>
 <li>He is a border-collie.</li> 
 <li>He loves hiking in the mountains.</li>
