--- a/Bentley.html
+++ b/Bentley.html
@@ -6,9 +6,9 @@
     <p><a href="index.html">Go Home</a></p>
     <h1>Say hello to Bentley!</h1> 
 <h2>Things to know...</h2> 
-<ul class="nav">
+<ol class="nav">
 <li>He just turned three years old.</li>
 <li>He is a border-collie.</li> 
 <li>He loves hiking in the mountains.</li>
 <li>If you ask him to cuddle, he will jump into your lap.</li> 
-</ul>
+</ol>
