--- a/Bentley.html
+++ b/Bentley.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="mystyle.css">
     <p><a href="index.html">Go Home</a></p>
     <h1>Say hello to Bentley!</h1> 
-<h2>Things to know...</h2> 
+<h2>Four Things to Know...</h2> 
 <ol class="nav">
 <li>He just turned three years old.</li>
 <li>He is a border-collie.</li> 
