--- a/Bentley.html
+++ b/Bentley.html
@@ -6,6 +6,11 @@
     <p><a href="index.html">Go Home</a></p>
     <h1>Say hello to Bentley!</h1> 
 <h2>Four Things to Know...</h2> 
+ <ul class="nav">
+    <li><a href="https://morganjustine.github.io/hobbies.html">My Hobbies</a></li>
+<li><a href="https://morganjustine.github.io/Bentley.html">My Dog></a></li>
+<li><a href="https://morganjustine.github.io/Sals.html">My Work></a></li>
+  </ul>
 <ol class="nav">
 <li>He just turned three years old.</li>
 <li>He is a border-collie.</li> 
