--- a/Bentley.html
+++ b/Bentley.html
@@ -12,3 +12,4 @@
 <li>He loves hiking in the mountains.</li>
 <li>If you ask him to cuddle, he will jump into your lap.</li> 
 </ol>
+    <img src="Bent.jpeg" alt="Bentley the border-collie celebrating his birthday in the mountains." />
