--- a/Bentley.html
+++ b/Bentley.html
@@ -7,9 +7,9 @@
     <h1>Say hello to Bentley!</h1> 
 <h2>Four Things to Know...</h2> 
 <ol class="nav">
-<li>He just turned three years old.</li>
+<li>He turned three years old in September 2020.</li>
 <li>He is a border-collie.</li> 
 <li>He loves hiking in the mountains.</li>
-<li>If you ask him to cuddle, he will jump into your lap.</li> 
+<li>If you ask him to cuddle, he will jump into your lap!</li> 
 </ol>
     <img src="Bent.jpeg" alt="Bentley the border-collie celebrating his birthday in the mountains." />
