--- a/Sals.html
+++ b/Sals.html
@@ -7,5 +7,22 @@
 	<body>
 	    <p><a href="index.html">Go Home</a></p>
 	    <p>This page shows you what I did before starting the LIT Program.</p>
+		<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
  	</body> 
 </html>
