--- a/Work.html
+++ b/Work.html
@@ -2,11 +2,9 @@
 <html>
 <head> 
 <title>Work</title>
-<link href="mystyle.css" rel="stylesheet" type="text/css"  />			
-</head>
-	<body>
+<link href="Work.css" rel="stylesheet" type="text/css"  />			
+<h1>This page shows you what I did before starting the LIT Program.</h1>
 	    <p><a href="index.html">Go Home</a></p>
-	    <p>This page shows you what I did before starting the LIT Program.</p>
 		<table style="width:100%">
   <tr>
     <th>Firstname</th>
