--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">My Hobbies</a></li>
 <li><a href="https://morganjustine.github.io/Bentley.html">My Dog></a></li>
-<li><a href="https://morganjustine.github.io/Sals.html">My Work></a></li>
+<li><a href="https://morganjustine.github.io/Work.html">My Work></a></li>
   </ul>
 </body>
