--- a/Work.html
+++ b/Work.html
@@ -2,9 +2,10 @@
 <html>
 <head> 
 <title>Work</title>
-<link href="Work.css" rel="stylesheet" type="text/css"  />			
-<h1>This page shows you what I did before starting the LIT Program.</h1>
-	    <p><a href="index.html">Go Home</a></p>
+	 <p><a href="index.html">Go Home</a></p>
+<link href="Work.css" rel="stylesheet" type="text/css"  />		
+	<h1>What I've been up too...</h1>
+	<h2>This page shows you what I did before starting the LIT Program.</h2>
 		<table style="width:100%">
   <tr>
     <th>Firstname</th>
