--- a/Work.html
+++ b/Work.html
@@ -7,21 +7,55 @@
 	<h1>What I've been up too...</h1>
 	<h2>This page shows you what I did before starting the LIT Program.</h2>
 		<table style="width:100%">
+<head>
+<style>
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 15px;
+}
+</style>
+</head>
+<body>
+
+<h2>This table shows you what I did before starting the LIT Program.</h2>
+<p>Besides the library, I worked at these jobs before starting the LIT program.</p>
+
+<table>
   <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>Age</th>
+    <th>Where I Worked</th>
+    <th>What I Did</th>
+    <th>When I Was There</th>
   </tr>
   <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
+    <td>Salisbury Greenhouse</td>
+    <td>Planted plants, watered greenhouse, designed arrangements</td>
+    <td>2018, 2019 and 2020 Summer Seasons</td>
   </tr>
   <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
+    <td>University of Alberta Libraries</td>
+    <td>Shelved books, managed a team of book shelvers, assisted with ILL, shelf reading, missing lists</td>
+    <td>2016-2017</td>
+  </tr>
+  <tr>
+    <td>Craft Cannabis</td>
+    <td>Trimmed cannabis</td>
+    <td>Four months in 2019<td>
+  </tr>
+  <tr>
+    <td>Aurora Cannabis</td>
+    <td>Assisted in the mother room, harvested & trimmed cannabis</td>
+    <td>Seven months of 2018</td>
   </tr>
 </table>
- 	</body> 
+
+</body>
 </html>
