--- a/Work.html
+++ b/Work.html
@@ -4,7 +4,7 @@
 <title>Work</title>
 	 <p><a href="index.html">Go Home</a></p>
 <link href="Work.css" rel="stylesheet" type="text/css"  />		
-	<h1>What I've been up to...</h1>
+	<h>What I've been up to...</h>
 <p>Besides the library, I worked at these jobs before starting the LIT program.</p>
 <table>
   <tr>
