--- a/Work.html
+++ b/Work.html
@@ -1,11 +1,11 @@
-<!doctype html>
-<html>
-<head> 
-<title>Work</title>
-	 <p><a href="index.html">Go Home</a></p>
-<link href="Work.css" rel="stylesheet" type="text/css"  />		
-	<h>What I've been up to...</h>
-<p>Besides the library, I worked at these jobs before starting the LIT program.</p>
+<!doctype html> 
+<html lang="en">
+<meta charset="utf-8">
+<title>Cmpt 104</title> 
+<link rel="stylesheet" href="Bentley.css">
+    <p><a href="index.html">Go Home</a></p>
+    <h1>Take A Look At What I Did Before Starting the LIT Program!!</h1> 
+<h2>This table breaks it down...</h2> 
 <table>
   <tr>
     <th>Where I Worked</th>
