--- a/Work.html
+++ b/Work.html
@@ -4,7 +4,7 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="Bentley.css">
     <p><a href="index.html">Go Home</a></p>
-    <h1>Take A Look At What I Did Before Starting the LIT Program!!</h1> 
+    <h1>What Did I Do Before the LIT Program?</h1> 
 <h2>This table breaks it down...</h2> 
 <table>
   <tr>
