--- a/Work.html
+++ b/Work.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8">
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="Bentley.css">
-    <p><a href="index.html">Go Home</a></p>
+    <p1><a href="index.html">Go Home</a></p1>
     <h1>What Did I Do Before the LIT Program?</h1> 
 <h2>This table breaks it down...</h2> 
-<p>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money to finally start the LIT program.</p2>
+<p2>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money to finally start the LIT program.</p2>
 <table>
   <tr>
     <th>Where I Worked</th>
