--- a/Work.html
+++ b/Work.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="utf-8">
 <title>Cmpt 104</title> 
-<link rel="stylesheet" href="Bentley.css">
+<link rel="stylesheet" href="Work.css">
     <p1><a href="index.html">Go Home</a></p1>
     <h1>What Did I Do Before the LIT Program?</h1> 
 <h2>This table breaks it down...</h2> 
