--- a/Work.html
+++ b/Work.html
@@ -7,7 +7,8 @@
     <h1>What Did I Do Before the LIT Program?</h1> 
 <h2>This table breaks it down...</h2> 
 <p2>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money to finally start the LIT program.</p2>
-<table>
+<body>
+       <table>
   <tr>
     <th>Where I Worked</th>
     <th>What I Did</th>
