--- a/Work.html
+++ b/Work.html
@@ -4,9 +4,9 @@
        <p1><a href="index.html">Go Home</a></p1>
 <title>Cmpt 104</title> 
  <link rel="stylesheet" href="Work.css">
-    <h1>What Did I Do Before the LIT Program?</h1> 
-<h2>This table breaks it down...</h2> 
-<p2>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money to finally start the LIT program.</p2>
+    <h1>Before the LIT Program</h1> 
+<h2>This table breaks down what I did...</h2> 
+<p2>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p2>
 <body>
        <table>
   <tr>
@@ -27,12 +27,12 @@
   <tr>
     <td>Craft Cannabis</td>
     <td>Trimmed cannabis</td>
-    <td>Four months in 2019<td>
+    <td>2019, Four Months<td>
   </tr>
   <tr>
     <td>Aurora Cannabis</td>
     <td>Assisted in the mother room, harvested & trimmed cannabis</td>
-    <td>Seven months of 2018</td>
+    <td>2018-2019, Seven Months</td>
   </tr>
 </table>
 </body>
