--- a/Work.html
+++ b/Work.html
@@ -1,12 +1,12 @@
 <!doctype html> 
 <html lang="en">
 <meta charset="utf-8">
-       <p1><a href="index.html">Go Home</a></p1>
-<title>Cmpt 104</title> 
- <link rel="stylesheet" href="Work.css">
+       <title>Cmpt 104</title> 
+<link rel="stylesheet" href="Work.css">
+    <p><a href="index.html">Go Home</a></p>
     <h1>Before the LIT Program</h1> 
 <h2>This table breaks down what I did...</h2> 
-<p2>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p2>
+<p1>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p1>
 <body>
        <table>
   <tr>
