--- a/Work.html
+++ b/Work.html
@@ -6,7 +6,7 @@
     <p><a href="index.html">Go Home</a></p>
     <h1>Before the LIT Program</h1> 
 <h2>This table breaks down what I did...</h2> 
-<p1>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p1>
+<p>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p>
 <body>
        <table>
   <tr>
