--- a/Work.html
+++ b/Work.html
@@ -7,22 +7,32 @@
     <h1>Before the LIT Program</h1> 
 <h2>This table breaks down what I did...</h2> 
 <p>I fell in love with working at the library during my U of A degree and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p>
-       <table>
-  <tr><th>Where I Worked</th>
+           <table>
+  <tr>
+    <th>Where I Worked</th>
     <th>What I Did</th>
-    <th>When I Was There</th></tr>
-  <tr><td>Salisbury Greenhouse</td>
+    <th>When I Was There</th>
+  </tr>
+  <tr>
+    <td>Salisbury Greenhouse</td>
     <td>Planted plants, watered greenhouse, designed arrangements</td>
-    <td>2018, 2019 and 2020 Summer Seasons</td></tr>
-  <tr><td>University of Alberta Libraries</td>
+    <td>2018, 2019 and 2020 Summer Seasons</td>
+  </tr>
+  <tr>
+    <td>University of Alberta Libraries</td>
     <td>Shelved books, managed a team of book shelvers, assisted with ILL, shelf reading, missing lists</td>
-    <td>2016-2017</td></tr>
-  <tr><td>Craft Cannabis</td>
+    <td>2016-2017</td>
+  </tr>
+  <tr>
+    <td>Craft Cannabis</td>
     <td>Trimmed cannabis</td>
-    <td>2019, Four Months<td></tr>
-  <tr><td>Aurora Cannabis</td>
+    <td>2019, Four Months<td>
+  </tr>
+  <tr>
+    <td>Aurora Cannabis</td>
     <td>Assisted in the mother room, harvested & trimmed cannabis</td>
-    <td>2018-2019, Seven Months</td></tr>
+    <td>2018-2019, Seven Months</td>
+  </tr>
 </table>
 </body>
 </html>
