--- a/Work.html
+++ b/Work.html
@@ -26,7 +26,7 @@
   <tr>
     <td>Craft Cannabis</td>
     <td>Trimmed cannabis</td>
-    <td>2019, Four Months<td>
+    <td>2019, Four Months</td>
   </tr>
   <tr>
     <td>Aurora Cannabis</td>
