--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="mystyle.css">
     <p><a href="index.html">Go Home</a></p>
-  <h1>This page shows you my hobbies!</h1> 
+  <h1>This page shows you one of my hobbies!</h1> 
   <h2>I love playing the flute. Most recently, I played with the University of Alberta Concert Band. The video below is from High School.</h2>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 </html>
