--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="utf-8">
 <title>Cmpt 104</title> 
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="hobbies.css">
     <p><a href="index.html">Go Home</a></p>
   <h1>This page shows you one of my hobbies!</h1> 
   <h2>I love playing the flute. Most recently, I played with the University of Alberta Concert Band. The video below is from High School.</h2>
