--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Cmpt 104</title> 
-<link rel="stylesheet" href="hobbies.css">
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
   <h1>Hello World!</h1> 
