--- a/Work.html
+++ b/Work.html
@@ -5,10 +5,9 @@
 <link rel="stylesheet" href="Work.css">
     <p><a href="index.html">Go Home</a></p>
     <h1>Before the LIT Program</h1> 
-       tr:hover {background-color:#f5f5f5;}
+<style>
+tr:hover {background-color:#f5f5f5;}
 </style>
-</head>
-<body>
 <h2>This table breaks down what I did...</h2> 
 <p>I fell in love with working at the library when I was at the U of A and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p>
            <table>
