--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Welcome to my website.</h2>
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">A Hobby</a></li>
-<li><a href="https://morganjustine.github.io/Bentley.html">My Dog></a></li>
-<li><a href="https://morganjustine.github.io/Work.html">Before LIT></a></li>
+<li><a href="https://morganjustine.github.io/Bentley.html">My Dog</a></li>
+<li><a href="https://morganjustine.github.io/Work.html">Before LIT</a></li>
   </ul>
 </body>
