--- a/photos.html
+++ b/photos.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta charset="utf-8">
+       <title>Cmpt 104</title> 
+<link rel="stylesheet" href="photos.css">
+    <p><a href="index.html">Go Home</a></p>
 <head>
 <style>
 div.gallery {
