--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <li><a href="https://morganjustine.github.io/hobbies.html">A Hobby</a></li>
 <li><a href="https://morganjustine.github.io/Bentley.html">My Dog</a></li>
 <li><a href="https://morganjustine.github.io/Work.html">Before LIT</a></li>
+    <li><a href="https://morganjustine.github.io/photos.html">Something Extra</a></li>
   </ul>
 </body>
