--- a/photos.html
+++ b/photos.html
@@ -27,10 +27,10 @@ div.desc {
 </head>
 <body>
 <div class="gallery">
-  <a target="_blank" href="img_5terre.jpg">
-    <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+  <a target="_blank" href="Jon.JPG">
+    <img src="Jon.JPG" alt="A picture of my boyfriend, Jonathan." width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">My boyfriend, Jonathan</div>
 </div>
 <div class="gallery">
   <a target="_blank" href="img_forest.jpg">
