--- a/photos.html
+++ b/photos.html
@@ -33,8 +33,8 @@ div.desc {
   <div class="desc">My boyfriend, Jonathan</div>
 </div>
 <div class="gallery">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+  <a target="_blank" href="Me&Han.jpeg">
+    <img src="Me&Han.jpeg" alt="A picture of Morgan (left) with friend Hannah (right)" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
