--- a/photos.html
+++ b/photos.html
@@ -36,19 +36,19 @@ div.desc {
   <a target="_blank" href="Me&Han.jpeg">
     <img src="Me&Han.jpeg" alt="A picture of Morgan (left) with friend Hannah (right)" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Hannah and I</div>
 </div>
 <div class="gallery">
-  <a target="_blank" href="img_lights.jpg">
-    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+  <a target="_blank" href="ConHall.jpeg">
+    <img src="ConHall.jpeg" alt="Convocation Hall in Arts Quad at the University of Alberta" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Convocation Hall in Autumn, September 2020</div>
 </div>
 <div class="gallery">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="House4.jpeg">
+    <img src="House4.jpeg" alt="A picture of me watering dianthus at work (Salisbury Greenhouse)" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Watering Dianthus at Salisbury Greenhouse</div>
 </div>
 </body>
 </html>
