--- a/photos.html
+++ b/photos.html
@@ -49,6 +49,11 @@ div.desc {
     <img src="House4.jpeg" alt="A picture of me watering dianthus at work (Salisbury Greenhouse)" width="600" height="400">
   </a>
   <div class="desc">Watering Dianthus at Salisbury Greenhouse</div>
+       <div class="gallery">
+  <a target="_blank" href="Sals1921.jpeg">
+    <img src="Sals1921.jpeg" alt="A picture of Greenhouse 19/21 (Salisbury Greenhouse) which is open to the public during the busy season." width="600" height="400">
+  </a>
+  <div class="desc">Greenhouse 19/21 at Salisbury Greenhouse</div>
 </div>
 </body>
 </html>
