--- a/photos.html
+++ b/photos.html
@@ -54,6 +54,36 @@ div.desc {
     <img src="Sals1921.jpeg" alt="A picture of Greenhouse 19/21 (Salisbury Greenhouse) which is open to the public during the busy season." width="600" height="400">
   </a>
   <div class="desc">Greenhouse 19/21 at Salisbury Greenhouse</div>
+              <div class="gallery">
+  <a target="_blank" href="Chico.jpeg">
+    <img src="Chico.jpeg" alt="A picture of my boyfriend's cat Chico, eating catgrass.." width="600" height="400">
+  </a>
+  <div class="desc">Chico Enjoying Cat Grass</div>    
+                        <div class="gallery">
+  <a target="_blank" href="Bowden.jpeg">
+    <img src="Bowden.jpeg" alt="A picture of my Meghan, Vanessa and me at Bowden Sunflower Maze" width="600" height="400">
+  </a>
+  <div class="desc">At Bowden Sunflower Maze with Meghan (right) and Vanessa (centre).</div> 
+                                                     <div class="gallery">
+  <a target="_blank" href="Blossom.jpeg">
+    <img src="Blossom.jpeg" alt="A picture of an apple blossom on an apple tree at Salisbury Greenhouse." width="600" height="400">
+  </a>
+  <div class="desc">An Apple Tree Blossoming at Salisbury Greenhouse.</div> 
+                                                                 <div class="gallery">
+  <a target="_blank" href="Jess.jpeg">
+    <img src="Jess.jpeg" alt="A picture my sister Jess and Bentley." width="600" height="400">
+  </a>
+  <div class="desc">My sister Jess and Bentley.</div> 
+             <div class="gallery">
+  <a target="_blank" href="Leilah&I.jpeg">
+    <img src="Leilah&I.jpeg" alt="A picture my cousin Leilah and me." width="600" height="400">
+  </a>
+  <div class="desc">My cousin Leilah and me.</div> 
+                    <div class="gallery">
+  <a target="_blank" href="Me.jpeg">
+    <img src="Mejpeg" alt="A picture me planting tomatoes at Salisbury Greenhouse." width="600" height="400">
+  </a>
+  <div class="desc">Planting tomatoes at Salisbury Greenhouse.</div> 
 </div>
 </body>
 </html>
