--- a/photos.html
+++ b/photos.html
@@ -49,41 +49,29 @@ div.desc {
     <img src="House4.jpeg" alt="A picture of me watering dianthus at work (Salisbury Greenhouse)" width="600" height="400">
   </a>
   <div class="desc">Watering Dianthus at Salisbury Greenhouse</div>
-       <div class="gallery">
-  <a target="_blank" href="Sals1921.jpeg">
-    <img src="Sals1921.jpeg" alt="A picture of Greenhouse 19/21 (Salisbury Greenhouse) which is open to the public during the busy season." width="600" height="400">
+ <div class="gallery">
+  <a target="_blank" href="Jon.JPG">
+    <img src="Jon.JPG" alt="A picture of my boyfriend, Jonathan." width="600" height="400">
   </a>
-  <div class="desc">Greenhouse 19/21 at Salisbury Greenhouse</div>
-              <div class="gallery">
-  <a target="_blank" href="Chico.jpeg">
-    <img src="Chico.jpeg" alt="A picture of my boyfriend's cat Chico, eating catgrass.." width="600" height="400">
+  <div class="desc">My boyfriend, Jonathan</div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="Me&Han.jpeg">
+    <img src="Me&Han.jpeg" alt="A picture of Morgan (left) with friend Hannah (right)" width="400" height="600">
   </a>
-  <div class="desc">Chico Enjoying Cat Grass</div>    
-                        <div class="gallery">
-  <a target="_blank" href="Bowden.jpeg">
-    <img src="Bowden.jpeg" alt="A picture of my Meghan, Vanessa and me at Bowden Sunflower Maze" width="600" height="400">
+  <div class="desc">Hannah and I</div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="ConHall.jpeg">
+    <img src="ConHall.jpeg" alt="Convocation Hall in Arts Quad at the University of Alberta" width="600" height="400">
   </a>
-  <div class="desc">At Bowden Sunflower Maze with Meghan (right) and Vanessa (centre).</div> 
-                                                     <div class="gallery">
-  <a target="_blank" href="Blossom.jpeg">
-    <img src="Blossom.jpeg" alt="A picture of an apple blossom on an apple tree at Salisbury Greenhouse." width="600" height="400">
+  <div class="desc">Convocation Hall in Autumn, September 2020</div>
+</div>
+<div class="gallery">
+  <a target="_blank" href="House4.jpeg">
+    <img src="House4.jpeg" alt="A picture of me watering dianthus at work (Salisbury Greenhouse)" width="600" height="400">
   </a>
-  <div class="desc">An Apple Tree Blossoming at Salisbury Greenhouse.</div> 
-                                                                 <div class="gallery">
-  <a target="_blank" href="Jess.jpeg">
-    <img src="Jess.jpeg" alt="A picture my sister Jess and Bentley." width="600" height="400">
-  </a>
-  <div class="desc">My sister Jess and Bentley.</div> 
-             <div class="gallery">
-  <a target="_blank" href="Leilah&I.jpeg">
-    <img src="Leilah&I.jpeg" alt="A picture my cousin Leilah and me." width="600" height="400">
-  </a>
-  <div class="desc">My cousin Leilah and me.</div> 
-                    <div class="gallery">
-  <a target="_blank" href="Me.jpeg">
-    <img src="Mejpeg" alt="A picture me planting tomatoes at Salisbury Greenhouse." width="600" height="400">
-  </a>
-  <div class="desc">Planting tomatoes at Salisbury Greenhouse.</div> 
+  <div class="desc">Watering Dianthus at Salisbury Greenhouse</div>
 </div>
 </body>
 </html>
