--- a/photos.html
+++ b/photos.html
@@ -90,15 +90,15 @@ div.desc {
 </div>
        
 <div class="gallery">
-  <a target="_blank" href="Jon.JPG">
-    <img src="Jon.JPG" alt="A picture of my boyfriend, Jonathan." width="600" height="400">
+  <a target="_blank" href="Sals1921.jpeg">
+    <img src="Jon.JPG" alt="A picture Greenhouse 19/21 at Salisbury Greenhouse." width="600" height="400">
   </a>
-  <div class="desc">My boyfriend, Jonathan</div>
+  <div class="desc">Greenhouse 19/21 at Salisbury Greenhouse</div>
 </div>
        
 <div class="gallery">
   <a target="_blank" href="Me.JPG">
-    <img src="Me.jpeg" alt="A picture of Morgan (me) planting tomatoes at work." width="400" height="600">
+    <img src="Me.JPG" alt="A picture of Morgan (me) planting tomatoes at work." width="400" height="600">
   </a>
   <div class="desc">Planting Tomatoes at work.</div>
 </div>
