--- a/photos.html
+++ b/photos.html
@@ -104,10 +104,10 @@ div.desc {
 </div>
        
 <div class="gallery">
-  <a target="_blank" href="ConHall.jpeg">
-    <img src="ConHall.jpeg" alt="Convocation Hall in Arts Quad at the University of Alberta" width="600" height="400">
+  <a target="_blank" href="Duckie.jpeg">
+    <img src="Duckie.jpeg" alt="My fish Duckie" width="600" height="400">
   </a>
-  <div class="desc">Convocation Hall in Autumn, September 2020</div>
+  <div class="desc">My Fish Duckie</div>
 </div>
        
 <div class="gallery">
