--- a/Bentley.html
+++ b/Bentley.html
@@ -4,6 +4,7 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="Bentley.css">
     <p><a href="index.html">Go Home</a></p>
+<body>
     <h1>Say hello to Bentley!</h1> 
 <h2>Four Things to Know...</h2> 
 <ol class="nav">
@@ -13,3 +14,4 @@
 <li>If you ask him to cuddle, he will jump into your lap!</li> 
 </ol>
     <img src="Bent.jpeg" alt="Bentley the border-collie celebrating his birthday in the mountains." />
+    </body>
