--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Hello World!</h1> 
   <h2>Welcome to my website.</h2>
+   <img src="Sting.jpeg" alt="Sting Ray Swimming at the Ripley Aquarium in Toronto." />
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">A Hobby</a></li>
 <li><a href="https://morganjustine.github.io/Bentley.html">My Dog</a></li>
