--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Hello World!</h1> 
   <h2>Welcome to my website.</h2>
-   <img src="Sting.jpeg" alt="Small sting ray Swimming at the Ripley Aquarium in Toronto, almost looks as if it is smiling for the camera." />
-  <img src="Jon&Sting.jpeg" alt="My boyfriend Jonathan looking at a large sting ray at the Ripley Aquarium in Toronto." />
+   <img1 src="Sting.jpeg" alt="Small sting ray Swimming at the Ripley Aquarium in Toronto, almost looks as if it is smiling for the camera." />
+  <img2 src="Jon&Sting.jpeg" alt="My boyfriend Jonathan looking at a large sting ray at the Ripley Aquarium in Toronto." />
   <ul class="nav">
     <li><a href="https://morganjustine.github.io/hobbies.html">A Hobby</a></li>
 <li><a href="https://morganjustine.github.io/Bentley.html">My Dog</a></li>
