--- a/Work.html
+++ b/Work.html
@@ -36,5 +36,6 @@ tr:hover {background-color:#f5f5f5;}
     <td>2018-2019, Seven Months</td>
   </tr>
 </table>
+       <img src="Sals1921.jpeg" alt="Greenhouse called 19/21 at Salisbury Greenhouse during the height of the busy season." />
 </body>
 </html>
