--- a/photos.html
+++ b/photos.html
@@ -84,8 +84,8 @@ div.desc {
 </div>
        
 <div class="gallery">
-  <a target="_blank" href="Working.jpeg">
-    <img src="Working.jpeg" alt="Me preparing pots for planting poinsettias by soaking the soil." width="600" height="400">
+  <a target="_blank" href="Working.JPG">
+    <img src="Working.JPG" alt="Me preparing pots for planting poinsettias by soaking the soil." width="600" height="400">
   </a>
   <div class="desc">Working Hard or Hardly Working?</div>
 </div>       
