--- a/photos.html
+++ b/photos.html
@@ -164,7 +164,7 @@ div.desc {
   <a target="_blank" href="Vanessa&Me.jpeg">
     <img src="Vanessa&Me.jpeg" alt="A picture of me (right) with friend Vanessa (left)." width="600" height="400">
   </a>
-  <div class="desc">Vanessa and Me at a mutual friend's wedding,</div>
+  <div class="desc">Vanessa and Me at a mutual friend's wedding</div>
 </div>
 </body>
 </html>
