--- a/photos.html
+++ b/photos.html
@@ -98,8 +98,8 @@ div.desc {
 </div>
               
 <div class="gallery">
-  <a target="_blank" href="House4.jpeg">
-    <img src="House4.jpeg" alt="A picture of me watering dianthus at work (Salisbury Greenhouse)" width="600" height="400">
+  <a target="_blank" href="Dianthus.jpeg">
+    <img src="Dianthus.jpeg" alt="Watering dianthus at Salisbury Greenhouse" width="600" height="400">
   </a>
   <div class="desc">Watering Dianthus at Salisbury Greenhouse</div>
 </div>
