--- a/Work.html
+++ b/Work.html
@@ -6,6 +6,7 @@
     <p><a href="index.html">Go Home</a></p>
     <h1>Before the LIT Program</h1> 
 <h2>This table breaks down what I did...</h2> 
+<style>
 <p>I fell in love with working at the library when I was at the U of A and knew that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program.</p>
            <table>
   <tr>
@@ -32,6 +33,8 @@
     <td>Assisted in the mother room, harvested & trimmed cannabis</td>
     <td>2018-2019, Seven Months</td>
   </tr>
+  tr:hover {background-color:#f5f5f5;}
+       </style>
 </table>
        <img src="Sals1921.jpeg" alt="Greenhouse called 19/21 at Salisbury Greenhouse during the height of the busy season." />
 </body>
