--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="hobbies.css">
 <body>
     <p><a href="index.html">Go Home</a></p>
+    <audio controls>
+  <source src="horse.mp3" type="audio/mpeg">
+</audio>
   <h1>99 Problems but a Reed Ain't One!</h1> 
   <h2>I love playing the flute. Most recently, I played with the University of Alberta Concert Band. The video below is from High School.</h2>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
