--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
   <source src="Can't Help Falling.mp3" type="audio/mpeg">
 </audio>
   <h1>99 Problems but a Reed Ain't One!</h1> 
-  <h2>I love playing the flute. Most recently, I played with the University of Alberta Concert Band. The video below is from High School.</h2>
+  <h2>I love playing the flute and ukulele! Most recently, I played my flute with the University of Alberta Concert Band. The video below is from High School. The audio clip above is a snippet of me playing Can't Help Falling in Love on my ukulele.</h2>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body> 
 </html>
