--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
     <audio controls>
   <source src="Can't Help Falling.mp3" type="audio/mpeg">
 </audio>
-  <h1>Music Hobbies</h1> 
+  <h1>Musical Passtimes</h1> 
   <h2>I love playing the flute and ukulele! Most recently, I played my flute with the University of Alberta Concert Band. The video below is from High School.</h2>
     <h3>The audio clip above is a snippet of me playing Can't Help Falling in Love on my ukulele.</h3>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ePsz7SrF-84" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
