--- a/Work.html
+++ b/Work.html
@@ -15,7 +15,7 @@
   </tr>
   <tr>
     <td>Salisbury Greenhouse</td>
-    <td>Planted plants, watered greenhouse, designed arrangements</td>
+    <td>Planted plants, watered greenhouses, designed arrangements</td>
     <td>2018, 2019 and 2020 Summer Seasons</td>
   </tr>
   <tr>
