--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,8 @@
        <title>Cmpt 104</title> 
 <link rel="stylesheet" href="photos.css">
     <p><a href="index.html">Go Home</a></p>
-
+              <head>
+<style>
 div.gallery {
   margin: 5px;
   border: 1px solid #ccc;
@@ -22,6 +23,8 @@ div.desc {
   padding: 15px;
   text-align: center;
 }
+       </style>
+</head>
         
 <div class="gallery">
   <a target="_blank" href="Jon.JPG">
