--- a/photos.html
+++ b/photos.html
@@ -24,6 +24,7 @@
     <img src="Vanessa&Me.jpeg" alt="A picture of me (right) with friend Vanessa (left)." width="600" height="400">
   </a>
   <div class="desc">Vanessa and Me at a mutual friend's wedding</div>
+       </div>
        
 <div class="gallery">
   <a target="_blank" href="StAlbertPlace.jpeg">
