--- a/photos.html
+++ b/photos.html
@@ -165,7 +165,8 @@
   <div class="desc">My Fish Duckie</div>    
 </div>
        
-<div class="clearfix"></div>       
+<div class="clearfix"></div> 
+<div style="padding:6px;">
        
 </body>
 </html>
