--- a/photos.html
+++ b/photos.html
@@ -3,7 +3,9 @@
 <meta charset="utf-8">
        <title>Cmpt 104</title> 
 <link rel="stylesheet" href="photos.css">
-    <p><a href="index.html">Go Home</a></p>      
+    <p><a href="index.html">Go Home</a></p> 
+        <audio controls>
+  <source src="Museum.mp3" type="audio/mpeg">
 <div class="responsive">       
 <div class="gallery">
   <a target="_blank" href="Jon.JPG">
