--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="hobbies.css">
 <body>
     <p><a href="index.html">Go Home</a></p>
+    <p><a href="Bentley.html">Bentley</a></p>
+    <p><a href="photos.html">Photo Gallery</a></p>
+    <p><a href="Work.html">Before LIT</a></p>
     <audio controls>
   <source src="Falling.mp3" type="audio/mpeg">
 </audio>
