--- a/Bentley.html
+++ b/Bentley.html
@@ -4,6 +4,9 @@
 <title>Cmpt 104</title> 
 <link rel="stylesheet" href="Bentley.css">
     <p><a href="index.html">Go Home</a></p>
+    <p><a href="photos.html">Photo Gallery</a></p>
+    <p><a href="Work.html">Before LIT</a></p>
+    <p><a href="hobbies.html">Hobbies</a></p>
     <h1>Say hello to Bentley!</h1> 
 <h2>Four Things to Know...</h2> 
 <ol class="nav">
