--- a/photos.html
+++ b/photos.html
@@ -4,6 +4,9 @@
        <title>Cmpt 104</title> 
 <link rel="stylesheet" href="photos.css">
     <p><a href="index.html">Go Home</a></p> 
+       <p><a href="Bentley.html">Bentley</a></p>
+    <p><a href="Work.html">Before LIT</a></p>
+    <p><a href="hobbies.html">Hobbies</a></p>
        
 <div class="responsive">       
 <div class="gallery">
