--- a/Work.html
+++ b/Work.html
@@ -3,7 +3,9 @@
 <meta charset="utf-8">
        <title>Cmpt 104</title> 
 <link rel="stylesheet" href="Work.css">
-    <p><a href="index.html">Go Home</a></p>
+    <p><a href="index.html">Go Home</a></p><p><a href="photos.html">Photo Gallery</a></p>
+    <p><a href="Bentley.html">Bentley</a></p>
+    <p><a href="hobbies.html">Hobbies</a></p>
     <h1>Before the LIT Program</h1> 
 <h2>This table breaks down what I did...</h2> 
 <p>I fell in love with working at the library when I was at the U of A. I realized that I wanted to pursue libraries as a career after graduating. It took me three long years of working odd jobs and saving up money before finally committing to the LIT program. It feels good to finally be here!</p>
