--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 <li><a href="https://morganjustine.github.io/Work.html">Before LIT</a></li>
     
     <li><a href="https://morganjustine.github.io/photos.html">Photo Gallery</a></li>
+    
+    <li><a href="https://morganjustine.github.io/MA.html">Mini Assignment</a></li>
   </ul>
 </body>
