--- a/MA.html
+++ b/MA.html
@@ -1,1 +1,10 @@
-code
+<!doctype html> 
+<html lang="en">
+<meta charset="utf-8">
+<title>Cmpt 104</title> 
+<link rel="stylesheet" href="hobbies.css">
+<body>
+    <p><a href="index.html">Go Home</a></p>
+    <p><a href="Bentley.html">Bentley</a></p>
+    <p><a href="photos.html">Photo Gallery</a></p>
+    <p><a href="Work.html">Before LIT</a></p>
