--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-  <h1>Hello World!</h1> 
-  <h2>Welcome to my website.</h2>
+  <h1>Hello Nugs Not Drugs Podcast Listeners!</h1> 
+  <h2>Welcome to our website.</h2>
    <img src="Sting.jpeg" alt="Small sting ray Swimming at the Ripley Aquarium in Toronto, almost looks as if it is smiling for the camera." />
   <img src="Jon&Sting.jpeg" alt="My boyfriend Jonathan looking at a large sting ray at the Ripley Aquarium in Toronto." />
   <ul class="nav">
